--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-My GitHub Page
+<html>
+  <body>
+    Lullizio IRC bot, see <a href="http://github.com/akisaarinen/lullizio">project page</a>.
+  </body>
+</html>
